fix timeline link contrast

--- a/src/assets/sass/_timeline.scss
+++ b/src/assets/sass/_timeline.scss
@@ -1,4 +1,7 @@
 .timeline {
+    a {
+        color: #006ee5;
+    }
     .col {
         padding-right: 10px;
         padding-left: 15px;
